# plux-native-manager

./: Cargo.toml  README.md
codegen/: Cargo.toml
src/: config.rs  error.rs  function.rs  lib.rs  manager.rs  plugin.rs
tests/: main.rs  utils.rs
